force-app/main/default/objects/referral__c/fields/ApptSetter__c.field-meta.xml
<CustomField>
    <fullName>ApptSetter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appt Setter</label>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>