force-app/main/default/objects/referral__c/fields/cCity__c.field-meta.xml
<CustomField>
    <fullName>cCity__c</fullName>
    <label>City</label>
    <length>70</length>
    <type>Text</type>
</CustomField>