force-app/main/default/objects/referral__c/fields/emailSent__c.field-meta.xml
<CustomField>
    <fullName>emailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sent</label>
    <type>Checkbox</type>
</CustomField>