force-app/main/default/objects/referral__c/fields/firstName__c.field-meta.xml
<CustomField>
    <fullName>firstName__c</fullName>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>