force-app/main/default/objects/referral__c/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>