force-app/main/default/objects/referral__c/fields/postalCode__c.field-meta.xml
<CustomField>
    <fullName>postalCode__c</fullName>
    <label>postal Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>