force-app/main/default/objects/referral__c/fields/rState__c.field-meta.xml
<CustomField>
    <fullName>rState__c</fullName>
    <label>State</label>
    <length>3</length>
    <type>Text</type>
</CustomField>