force-app/main/default/objects/referral__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>ApptSetter__c</columns>
    <columns>account__c</columns>
    <columns>firstName__c</columns>
    <columns>lastName__c</columns>
    <columns>Address__c</columns>
    <columns>cCity__c</columns>
    <columns>rState__c</columns>
    <columns>postalCode__c</columns>
    <columns>phone__c</columns>
    <columns>email__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>